KeePassDroid (2.3.3)
 * Merge 2.3 branch

KeePassDroid (2.3.2)
 * Bug fixes

KeePassDroid (2.3.1)
 * Fix notifications
 * Add adaptive icon

KeePassDroid (2.3)
 * Drop support for pre-Ice Cream Sandwhich devices
 * Implement runtime permissions Marshamllow and later

KeePassDroid (2.2.2.5)
 * Remove donate link from Play Store version

KeePassDroid (2.2.2.4)
 * Handle fingerprint key invalidation

KeePassDroid (2.2.2.3)
 * Improve fingerprint error handling
 * Updated Russian translations

KeePassDroid (2.2.2.2)
 * Prevent fingerprint infinite loop
 * Update Italian translations

KeePassDroid (2.2.2.1)
 * Prevent fingerprint exception

KeePassDroid (2.2.2)
 * Fix date integer overflow
 * Fix fingerprint listening on resume
 * Updated German translations

KeePassDroid (2.2.1)
 * Fix kdbx4 date corruption
 * Updated German translations

KeePassDroid (2.2.0.9)
 * Update build tools version to workaround CM/Lineage bug (closes: #249)
 * Update Russian translations
 * Update Polish translations

KeePassDroid (2.2.0.8)
 * Add corruption fix mode
 * Update Hungarian translations

KeePassDroid (2.2.0.7)
 * Fix KDBX3 encryption rounds corruption
 * Fix KDBX4 attachement crashes

KeePassDroid (2.2.0.6)
 * Add additional ndk ABIs

KeePassDroid (2.2.0.5)
 * Don't show fingerprint prompt on devices without fingerprint hardware
 * Fix dateformat crashes

KeePassDroid (2.2.0.4)
 * Fingerprint fixes

KeePassDroid (2.2.0.3)
 * Search crash fix
 * Improve fingerprint handling

KeePassDroid (2.2.0.2)
 * Fix non fingerprint password layout

KeePassDroid (2.2.0.1)
 * Small fingerprint fixes

KeePassDroid (2.2.0.0)
 * Add Fingerprint integration

KeePassDroid (2.1.0.0)
 * Add support for KDBXv4 (used in mainline KeePass >= 2.35)
 * Updated Lithuanian translations
 * Updated Russian translations
 * Updated French translations
 * Add Samsung multi-window support

KeePassDroid (2.0.6.4)
 * Expose Storage Access Framework option

KeePassDroid (2.0.6.3)
 * Fix various crashes
