@@ -1,3 +1,6 @@
+KeePassDroid (2.3.4)
+ * Fix crash
+
 KeePassDroid (2.3.3)
  * Merge 2.3 branch
 
